# MAS-group38

./: MAS-group38.cabal  README.md
scripts/: assignment4.py  assignment5_1.py  assignment5_2.py  assignment5_34.py
src/: Assignment6.hs
src/Utils/: NormalDistr.hs
